# ASS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
obDocs/: Control Registers.md  General Registers.md  Registers.md  Sections.md  Segment Registers.md
obDocs/.obsidian/: workspace
src/hello/: CMakeLists.txt  CTestTestfile.cmake  hello.asm
src/import/: CMakeLists.txt  CTestTestfile.cmake  helloword-inc.asm
src/stack/: CMakeLists.txt  CTestTestfile.cmake  stack.asm
src/teste/: CMakeLists.txt  CTestTestfile.cmake  teste.asm
