cmake_minimum_required(VERSION 3.21)
set(project-name ASS)
enable_language(ASM_NASM)
file(GLOB SOURCES src/*)
file(GLOB OBJS CMakeFiles/${project-name}.dir/src/*)
set(CMAKE_ASM_NASM_LINK_EXECUTABLE "ld -m elf_i386 ${OBJS}  -o ${project-name} ")
set(CMAKE_ASM_NASM_OBJECT_FORMAT elf32)
project(${project-name} ASM_NASM)
set_source_files_properties(*.asm PROPERTIES LANGUAGE ASM_NASM)
add_executable(${project-name} ${SOURCES})