cmake_minimum_required(VERSION 3.21)
set(project-name stack)
enable_language(ASM_NASM)
file(GLOB SOURCES *.asm)
file(GLOB OBJS CMakeFiles/${project-name}.dir/stack.asm.o)
set(CMAKE_ASM_NASM_LINK_EXECUTABLE "ld -m elf_i386 ${OBJS}  -o ${project-name} ")
set(CMAKE_ASM_NASM_OBJECT_FORMAT elf32)
set_source_files_properties(*.asm PROPERTIES LANGUAGE ASM_NASM)
project(${project-name} ASM_NASM)
add_executable(${project-name} ${SOURCES})